z-index backside to avoid overlap with the menu.

--- a/src/app/components/parts/checkout/checkout.component.css
+++ b/src/app/components/parts/checkout/checkout.component.css
@@ -123,6 +123,11 @@ table {
   
   tr:nth-child(1) {background-color: #111;}
 
+  .show-total{
+      color: #FFF;
+      font-weight: bold ;
+      margin: 2rem 0 2rem;
+  }
 
 @keyframes slide {
     
